Fixed api issues and started integration with frontend
